JBIDE-17066 - Fix page layout on mobile/tablet

--- a/stylesheets/jbt-styles.scss
+++ b/stylesheets/jbt-styles.scss
@@ -464,7 +464,7 @@ body {
   
 }
 .bs-docs-sidenav.affix {
-  position: fixed;
+  //position: fixed;
   top: 40px; // matches height of navbar
 }
 .bs-docs-sidenav.affix-bottom {
